--- a/css/css.css
+++ b/css/css.css
@@ -55,9 +55,7 @@ body {
     justify-content: center;
 }
 .menu a:hover{
-      background-color: #00ff00;
-      color: #4c9ed9;
-      border: 1px solid #111;
+      background-color: #fff;
 }
 
 .logo {
